--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         </li>
         <li>
             <a href="wildberries.html" class="active">
-                <img src="фавиконы/WB.webp" alt="Wildberries" loading="lazy">
+                <img src="фавиконы/WB.jpg" alt="Wildberries" loading="lazy">
                 Wildberries
             </a>
         </li>
         <li>
             <a href="ozon.html">
-                <img src="фавиконы/ozon.webp" alt="OZON" loading="lazy">
+                <img src="фавиконы/ozon.jpg" alt="OZON" loading="lazy">
                 OZON
             </a>
         </li>
